<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/rounded_bg"
    android:padding="@dimen/_8sdp">

    <!-- Success Icon -->
    <ImageView
        android:id="@+id/ivSuccess"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/welcome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintTop_toBottomOf="@id/ivSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15sdp"/>

    <!-- Subtitle 1 -->
    <TextView
        android:id="@+id/tvSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_role_to_continue_with_app"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_regular"
        android:textAlignment="center"
        android:lineHeight="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"/>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_primary"
            android:text="@string/continue_as_normal_user"
            android:textAllCaps="false"
            android:paddingHorizontal="@dimen/_15sdp"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            app:backgroundTint="@color/color_primary"
         />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_provider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/continue_service_provider"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/color_primary"
            android:background="@drawable/bg_button_stroke_primary"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>