<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:padding="@dimen/_20sdp">

    <!-- Success Icon -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivSuccess"
        android:layout_width="@dimen/_56sdp"
        android:layout_height="@dimen/_56sdp"
        android:src="@drawable/ic_exist"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logging_out"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_bold"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/ivSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_16sdp" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/you_are_logging_out_of_app_next_time_you_have_to_login_again"
        android:textColor="@color/gray"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_regular"
        android:textAlignment="center"
        android:lineSpacingExtra="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_34sdp"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/_15sdp"
        android:text="@string/cancel"
        android:layout_marginEnd="@dimen/_5sdp"
        android:textAllCaps="false"
        android:textSize="@dimen/_12sdp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/color_primary"
        android:background="@drawable/bg_button_stroke_primary"
        />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_primary"
            android:text="@string/confirm"
            android:layout_marginStart="@dimen/_5sdp"
            android:textAllCaps="false"
            android:paddingHorizontal="@dimen/_15sdp"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            app:backgroundTint="@color/color_primary"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>