<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:padding="@dimen/_15sdp">

    <!-- Success Icon -->
    <ImageView
        android:id="@+id/ivSuccess"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_125sdp"
        android:src="@drawable/welcome"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_alex_carry"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintTop_toBottomOf="@id/ivSuccess"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15sdp"/>

    <!-- Subtitle 1 -->
    <TextView
        android:id="@+id/tvSubtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_your_vehicle_car_amp_moto_inspection_journey_today_by_providing_vehicle_data_to_workshop"
        android:textColor="@color/primary_text_description"
        android:textSize="@dimen/_10sdp"

        android:fontFamily="@font/montserrat_regular"
        android:textAlignment="center"
        android:lineHeight="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"/>


    <!-- Done Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="@dimen/_34sdp"
        android:text="@string/start_now"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:background="@drawable/bg_button_primary"
        android:textSize="@dimen/_12sdp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"/>


    <!-- Done Button -->


</androidx.constraintlayout.widget.ConstraintLayout>